--- a/src/components/schedule/schedule.html
+++ b/src/components/schedule/schedule.html
@@ -34,9 +34,7 @@
           </a>
         </div>
       </div>
-      <ul class="schedule__day-list">
-        <!-- JS로 동적으로 렌더링 -->
-      </ul>
+      <ul class="schedule__day-list"></ul>
     </section>
   </body>
 </html>
