--- a/src/components/suggest/suggest.html
+++ b/src/components/suggest/suggest.html
@@ -69,23 +69,23 @@
               <picture class="suggest__images">
                 <source
                   srcset="
-                    ../../assets/images/suggest/london_1x.avif 1x,
-                    ../../assets/images/suggest/london_2x.avif 2x
+                    ./src/assets/images/suggest/london_1x.avif 1x,
+                    ./src/assets/images/suggest/london_2x.avif 2x
                   "
                   type="image/avif"
                 />
                 <source
                   srcset="
-                    ../../assets/images/suggest/london_1x.webp 1x,
-                    ../../assets/images/suggest/london_2x.webp 2x
+                    ./src/assets/images/suggest/london_1x.webp 1x,
+                    ./src/assets/images/suggest/london_2x.webp 2x
                   "
                   type="image/webp"
                 />
                 <img
-                  src="../../assets/images/suggest/london_1x.jpg"
-                  srcset="../../assets/images/suggest/london_2x.jpg 2x"
+                  src="./src/assets/images/suggest/london_1x.jpg"
+                  srcset="./src/assets/images/suggest/london_2x.jpg 2x"
                   alt="런던"
-                  loading="lazy"
+                  loading="eager"
                   decoding="async"
                 />
               </picture>
@@ -116,23 +116,23 @@
               <picture class="suggest__images">
                 <source
                   srcset="
-                    ../../assets/images/suggest/tokyo_1x.avif 1x,
-                    ../../assets/images/suggest/tokyo_2x.avif 2x
+                    ./src/assets/images/suggest/tokyo_1x.avif 1x,
+                    ./src/assets/images/suggest/tokyo_2x.avif 2x
                   "
                   type="image/avif"
                 />
                 <source
                   srcset="
-                    ../../assets/images/suggest/tokyo_1x.webp 1x,
-                    ../../assets/images/suggest/tokyo_2x.webp 2x
+                    ./src/assets/images/suggest/tokyo_1x.webp 1x,
+                    ./src/assets/images/suggest/tokyo_2x.webp 2x
                   "
                   type="image/webp"
                 />
                 <img
-                  src="../../assets/images/suggest/tokyo_1x.jpg"
-                  srcset="../../assets/images/suggest/tokyo_2x.jpg 2x"
+                  src="./src/assets/images/suggest/tokyo_1x.jpg"
+                  srcset="./src/assets/images/suggest/tokyo_2x.jpg 2x"
                   alt="도쿄"
-                  loading="lazy"
+                  loading="eager"
                   decoding="async"
                 />
               </picture>
@@ -163,23 +163,23 @@
               <picture class="suggest__images">
                 <source
                   srcset="
-                    ../../assets/images/suggest/ny_1x.avif 1x,
-                    ../../assets/images/suggest/ny_2x.avif 2x
+                    ./src/assets/images/suggest/ny_1x.avif 1x,
+                    ./src/assets/images/suggest/ny_2x.avif 2x
                   "
                   type="image/avif"
                 />
                 <source
                   srcset="
-                    ../../assets/images/suggest/ny_1x.webp 1x,
-                    ../../assets/images/suggest/ny_2x.webp 2x
+                    ./src/assets/images/suggest/ny_1x.webp 1x,
+                    ./src/assets/images/suggest/ny_2x.webp 2x
                   "
                   type="image/webp"
                 />
                 <img
-                  src="../../assets/images/suggest/ny_1x.jpg"
-                  srcset="../../assets/images/suggest/ny_2x.jpg 2x"
+                  src="./src/assets/images/suggest/ny_1x.jpg"
+                  srcset="./src/assets/images/suggest/ny_2x.jpg 2x"
                   alt="뉴욕"
-                  loading="lazy"
+                  loading="eager"
                   decoding="async"
                 />
               </picture>
@@ -210,23 +210,23 @@
               <picture class="suggest__images">
                 <source
                   srcset="
-                    ../../assets/images/suggest/paris_1x.avif 1x,
-                    ../../assets/images/suggest/paris_2x.avif 2x
+                    ./src/assets/images/suggest/paris_1x.avif 1x,
+                    ./src/assets/images/suggest/paris_2x.avif 2x
                   "
                   type="image/avif"
                 />
                 <source
                   srcset="
-                    ../../assets/images/suggest/paris_1x.webp 1x,
-                    ../../assets/images/suggest/paris_2x.webp 2x
+                    ./src/assets/images/suggest/paris_1x.webp 1x,
+                    ./src/assets/images/suggest/paris_2x.webp 2x
                   "
                   type="image/webp"
                 />
                 <img
-                  src="../../assets/images/suggest/paris_1x.jpg"
-                  srcset="../../assets/images/suggest/paris_2x.jpg 2x"
+                  src="./src/assets/images/suggest/paris_1x.jpg"
+                  srcset="./src/assets/images/suggest/paris_2x.jpg 2x"
                   alt="파리"
-                  loading="lazy"
+                  loading="eager"
                   decoding="async"
                 />
               </picture>
