style : 추천 컴포넌트 object-fit: cover 추가

--- a/src/components/suggest/suggest.css
+++ b/src/components/suggest/suggest.css
@@ -57,6 +57,7 @@
       width: 100%;
       aspect-ratio: 5 / 3;
       transition: scale 0.5s ease-in-out;
+      object-fit: cover;
 
       &:hover {
         scale: 1.01;
